--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,5 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Esta es una aplicación web vulnerable que no debe ser usada en producción, creada intencionalmente con fallas de seguridad para servir de prueba en el usao de BrakemanPro.
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Está desarrollada en RubyOnRails.
